# yadro-algo-test-task

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
examples/: bad_name_example.txt  not_right_template.cpp
src/: client.cpp  client.h  computer_club.cpp  computer_club.h  event.cpp  event.h  event_loop.cpp  main.cpp  mytime.cpp  mytime.h  table.cpp  table.h  time.cpp
tests/: main.cpp  test_client.cpp
